Extend timeout for ZeroSSL IT